--- a/config.json.example
+++ b/config.json.example
@@ -2,7 +2,7 @@
     "PORT": 8083,
     "API_KEY": "your-secret-api-key",
     "BIND_HOST": "127.0.0.1",
-    "DISABLE_TOOLS": true,
+    "DISABLE_TOOLS": false,
     "OPENCODE_SERVER_URL": "http://127.0.0.1:4097",
     "OPENCODE_PATH": "opencode"
 }
